added a feature for random playlist

--- a/src/templates/search.html
+++ b/src/templates/search.html
@@ -21,9 +21,9 @@
         <p class="blank"></p>
         <div class="nes-field" id="inputs" style="text-align:center;">
             <form action='/search' method="post">
-                <label for="name_field">Enter BGM's ID</label>
+                <label for="name_field">Enter BGM's ID or "random"</label>
                 <div class="input_wrap">
-                    <input type="text" id="trackid" name="trackid" required minlength="1" style="width:600px;height:40px;" wrap="soft" class="nes-input">
+                    <input type="text" id="trackid" name="trackid" style="width:600px;height:40px;" wrap="soft" class="nes-input">
                 </div>
                 <label for="name_field">If needed, enter the number of songs</label>
                 <div class="input_wrap">
